--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -429,21 +429,21 @@ zh-SG:
   <<: *DEFAULT_ZH_HANS
 # Taiwan (Traditional Chinese)
 zh-TW: &DEFAULT_ZH_HANT
-  skip_links                 :
-  skip_primary_nav           : "轉至主導航欄"
-  skip_content               : "轉至内容"
-  skip_footer                : "轉至頁脚"
+  skip_links                 : "跳轉連結"
+  skip_primary_nav           : "跳至主要導航欄"
+  skip_content               : "跳至内容"
+  skip_footer                : "跳至頁脚"
   page                       : "頁面"
   pagination_previous        : "前一頁"
   pagination_next            : "後一頁"
   breadcrumb_home_label      : "首頁"
   breadcrumb_separator       : "/"
   menu_label                 : "切換選單"
-  search_label               : "切換搜索"
-  toc_label                  : "本頁"
+  search_label               : "切換搜尋"
+  toc_label                  : "目錄"
   ext_link_label             : "外部連結"
   less_than                  : "少於"
-  minute_read                : "分鐘閱讀"
+  minute_read                : "閱讀時間"
   share_on_label             : "分享到"
   meta_label                 :
   tags_label                 : "標籤:"
@@ -471,11 +471,11 @@ zh-TW: &DEFAULT_ZH_HANT
   comment_success_msg        : "感謝您的留言！ 審核後將會顯示在站上。"
   comment_error_msg          : "抱歉，部份資料輸入有問題。請確認資料填寫正確後再試一次。"
   loading_label              : "載入中..."
-  search_label_text          : "輸入您要搜索的關鍵詞..."
-  search_placeholder_text    : "輸入您要搜索的關鍵詞..."
+  search_label_text          : "輸入您要搜尋的關鍵字..."
+  search_placeholder_text    : "輸入您要搜索的關鍵字..."
   search_algolia_no_results  : "沒有結果"
   results_found              : "條匹配的記錄"
-  back_to_top                : "回到頂部"
+  back_to_top                : "回到頂端"
 zh-HK:
   <<: *DEFAULT_ZH_HANT
 
