--- a/_config.yml
+++ b/_config.yml
@@ -286,5 +286,5 @@ defaults:
       author_profile: true
       read_time: true
       comments: # true
-      share: true
+      share: false
       related: true
