--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -443,17 +443,17 @@ zh-TW: &DEFAULT_ZH_HANT
   toc_label                  : "目錄"
   ext_link_label             : "外部連結"
   less_than                  : "少於"
-  minute_read                : "閱讀時間"
-  share_on_label             : "分享到"
+  minute_read                : "分鐘的閱讀時間"
+  share_on_label             : "分享到："
   meta_label                 :
-  tags_label                 : "標籤:"
-  categories_label           : "分類:"
-  date_label                 : "更新時間:"
+  tags_label                 : "標籤："
+  categories_label           : "分類："
+  date_label                 : "更新時間："
   comments_label             : "留言"
   comments_title             : "留言內容"
   more_label                 : "了解更多"
-  related_label              : "猜您有與趣"
-  follow_label               : "追蹤:"
+  related_label              : "您可能感興趣的文章："
+  follow_label               : "追蹤："
   feed_label                 : "RSS Feed"
   powered_by                 : "Powered by"
   website_label              : "網站"
@@ -472,7 +472,7 @@ zh-TW: &DEFAULT_ZH_HANT
   comment_error_msg          : "抱歉，部份資料輸入有問題。請確認資料填寫正確後再試一次。"
   loading_label              : "載入中..."
   search_label_text          : "輸入您要搜尋的關鍵字..."
-  search_placeholder_text    : "輸入您要搜索的關鍵字..."
+  search_placeholder_text    : "輸入您要搜尋的關鍵字..."
   search_algolia_no_results  : "沒有結果"
   results_found              : "條匹配的記錄"
   back_to_top                : "回到頂端"
