--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -460,16 +460,16 @@ zh-TW: &DEFAULT_ZH_HANT
   email_label                : "電子信箱"
   recent_posts               : "最新文章"
   undefined_wpm              : "_config.yml 中未定義 words_per_minute"
-  comment_form_info          : "您的電子信箱不會被公開. 必填部份已標記"
+  comment_form_info          : "您的電子信箱不會被公開。必填部份已標記"
   comment_form_comment_label : "留言內容"
   comment_form_md_info       : "支援 Markdown 語法。"
   comment_form_name_label    : "名字"
   comment_form_email_label   : "電子信箱帳號"
-  comment_form_website_label : "網頁 (可選填)"
+  comment_form_website_label : "網頁 (非必要)"
   comment_btn_submit         : "送出留言"
   comment_btn_submitted      : "已送出"
   comment_success_msg        : "感謝您的留言！ 審核後將會顯示在站上。"
-  comment_error_msg          : "抱歉，部份資料輸入有問題。請確認資料填寫正確後再試一次。"
+  comment_error_msg          : "抱歉，部份資料有問題。請確認資料填寫正確後再試一次。"
   loading_label              : "載入中..."
   search_label_text          : "輸入您要搜尋的關鍵字..."
   search_placeholder_text    : "輸入您要搜尋的關鍵字..."
