--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "zh-TW"
 title                    : "NVDA 文件庫"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "NVDA 台灣志工群"
+name                     : "台灣 NVDA 志工群"
 description              : "彙整 NVDA 常見問題與技術資料。"
 url                      : "https://visualaids.github.io/nvda-doc/"
 baseurl                  : "/nvda-doc"
