--- a/_config.yml
+++ b/_config.yml
@@ -285,6 +285,6 @@ defaults:
       layout: single
       author_profile: true
       read_time: false
-      comments: # true
+      comments: true
       share: false
       related: true
