--- a/_config.yml
+++ b/_config.yml
@@ -284,7 +284,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: false
       comments: true
       share: false
