--- a/_config.yml
+++ b/_config.yml
@@ -62,12 +62,12 @@ atom_feed:
   hide                   : # true, false (default)
 search                   : true
 search_full_content      : true
-search_provider          : google
+search_provider          : algolia
 algolia:
-  application_id         : # YOUR_APPLICATION_ID
-  index_name             : # YOUR_INDEX_NAME
-  search_only_api_key    : # YOUR_SEARCH_ONLY_API_KEY
-  powered_by             : # true (default), false
+  application_id         : O6KUVB0OKU # YOUR_APPLICATION_ID
+  index_name             : nvdoc # YOUR_INDEX_NAME
+  search_only_api_key    : fff30d75274175a2f05e9a78bfd9d4bc # YOUR_SEARCH_ONLY_API_KEY
+  powered_by             : true # true (default), false
 google:
   search_engine_id       : b96f523e7e58ad974
   instant_search         : false
